--- a/less/index.less
+++ b/less/index.less
@@ -2,7 +2,9 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  -webkit-box-sizing: border-box;
+}
+html {
+  background-color: #ccc;
 }
 @width: 200px;
 @height: 100px;
